fixing social links on mobile

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -6031,7 +6031,8 @@ a {
     width: 100%;
     height: 100%;
     content: '';
-    transition: all 200ms ease-in; }
+    transition: all 200ms ease-in;
+    background: rgba(255, 255, 255, 0.95); }
   @media (min-width: 1200px) {
     #header {
       position: fixed; }
@@ -6171,6 +6172,14 @@ a {
           border-top: solid 1px rgba(255, 255, 255, 0.7);
           align-items: center;
           justify-content: center; } }
+      #header .nav .social-links .social {
+        border: solid 1px rgba(255, 255, 255, 0.1); }
+        #header .nav .social-links .social.facebook:before {
+          background: no-repeat 9px 9px url(/images/icons/facebook_white.svg);
+          background-size: 20px; }
+        #header .nav .social-links .social.twitter:before {
+          background: no-repeat 9px 9px url(/images/icons/twitter_white.svg);
+          background-size: 20px; }
 
 .footer {
   position: relative;
