--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -57,7 +57,7 @@ a {
     height: 100%;
     content: '';
     transition: all 200ms ease-in;
-    // background: #111;
+    background: rgba(255,255,255,.95);
   }
   @media (min-width: $breakpoint-xl) {
     position: fixed;
@@ -243,6 +243,21 @@ a {
 
         align-items: center;
         justify-content: center;
+      }
+      .social {
+        border: solid 1px rgba(255,255,255,.1);
+        &.facebook {
+          &:before {
+            background: no-repeat 9px 9px url(/images/icons/facebook_white.svg);
+            background-size: 20px;
+          }
+        }
+        &.twitter {
+          &:before {
+            background: no-repeat 9px 9px url(/images/icons/twitter_white.svg);
+            background-size: 20px;
+          }
+        }
       }
     }
   }
